[project]
name = "kubhist2"
version = "1"
description = "Accompanying code to create a hugginface version of the Kubhist2 newspaper archive."
authors = [
    {name = "drvenabili",email = "simon.hengchen@unige.ch"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "datasets (>=4.1.1,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "typer (>=0.19.2,<0.20.0)",
    "ruff (>=0.13.1,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
